--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -3,7 +3,7 @@ on: [push, pull_request]
 
 jobs:
   test:
-    runs-on: debian-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: copiar arquivos
